# keyless-zk-proofs

./: .gitignore  .gitmodules  .last_maintenance_time  CHANGELOG.md  Cargo.toml  ICICLE_INTEGRATION.md  README.md  formatted_input.json  pyproject.toml  run_prover.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-image.yaml  run-tests.yaml
automated-docker-test/: Cargo.toml  README.md  test_deployment.yml
automated-docker-test/dockerfiles/: mock-on-chain-run.sh  test-runner.Dockerfile
automated-docker-test/src/: main.rs
automated-docker-test/test-staging/: envvars.env  jwk.json  jwk_keypair.json  tw_vk.txt
circuit/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
circuit/src/: arrays.rs  base64.rs  bigint.rs  hash_to_field.rs  jwt_field_parsing.rs  lib.rs  misc.rs  packing.rs  rsa.rs  sha.rs
circuit/templates/: keyless.circom  main.circom  mainTemplate.circom
circuit/tests/: array_selector_test.circom  assert_is_substring_test.circom  base64_decode_test.circom  base64_decode_test_short.circom  base64_decoded_length.circom  rsa_verify_test.circom  sha2_padding_verify_test.circom
docker-test/: test_deployment.yml  test_docker_image.sh  testing_envvars.txt
docker-test/mock-on-chain/: Dockerfile
git-hooks/: compile-circom-if-needed-pre-commit
keyless-common/: Cargo.toml
keyless-common/src/: lib.rs  logging.rs
keyless-common/src/input_processing/: circuit_input_signals.rs  encoding.rs
mock-on-chain/: Cargo.toml  envvars.env  jwk.json  jwk_keypair.json  snarkjs_verification_key.json  test_deployment.yml  tw_vk.txt
mock-on-chain/dockerfiles/: mock-on-chain.Dockerfile  test-runner.Dockerfile
mock-on-chain/src/: main.rs
prover-service/: Cargo.toml  Dockerfile  circuit_config.yml  config.yml  config_docker_test.yml
prover-service/src/: api.rs  (+10 more)
release-helper/: Cargo.toml
release-helper/src/: main.rs
rust-rapidsnark/: Cargo.toml  build.rs
scripts/: compile_prover.sh  install_icicle_backend.sh  run_gpu_sanity.sh  setup_gpu_cuda_env.sh  task.sh
(+226 files in other folders)
