[tool.poetry]
name = "keyless-icicle"
version = "0.1.0"
description = "Python utilities and helper scripts for the keyless icicle project."
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.3"
click = ">=8.1,<8.2"
google-cloud-storage = "^2.16.0"
pyjwt = "^2.9.0"
pycryptodome = "^3.20.0"
cryptography = "^42.0.5"
typing-extensions = "^4.11.0"
numpy = "^1.26.4"
sympy = "^1.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
