[package]
name = "aptos-keyless-common"
description = "Aptos Keyless common modules"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
aptos-types = { workspace = true }
ark-bn254 = { workspace = true }
ark-serialize = { workspace = true }
ark-ff = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
maplit2 = { workspace = true }
num-bigint = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
