[package]
name = "release-helper"
description = "Aptos Keyless Release Helper"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
aptos-keyless-common = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
